--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
       <!-- plant section start here -->
        <section class="plan-section commin-width">
                               <div class="pln-conten">
-                                        <h3 class="plan-title">Our Plants</h3>
+                                        <h3 class="plan-title"><span class="deal-class">Our</span> Plants</h3>
                                         <p class="plan-descrition">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>classic roses to exotic blooms, we offer a wide variety of fresh.</p>
                               </div>
 
                               <div class="plan-img-continer">
                                               <div>
                                                   <img src="assets/sample-flower-image.png" alt="">
-                                                  <p></p>Lily Blossom</p>
+                                                  <p>Lily Blossom</p>
                                                   <p class="p-weight">20 USD</p>
                                                   <input class="plan-input" type="text" placeholder="ADD TO CART">
 
@@ -65,14 +65,14 @@
                                                   <img src="assets/sample-flower-image.png" alt="">
                                                      <p>Lily Blossom</p>
                                                       <p class="p-weight">20 USD</p>
-                                                  <input type="text" placeholder="ADD TO CART">
+                                                  <input class="plan-input" type="text" placeholder="ADD TO CART">
 
                                         </div>
                                               <div>
                                                   <img src="assets/sample-flower-image.png" alt="">
                                                    <p>Lily Blossom</p>
                                                     <p class="p-weight">20 USD</p>
-                                                  <input type="text" placeholder="ADD TO CART">
+                                                  <input class="plan-input" type="text" placeholder="ADD TO CART">
 
                                         </div>  
 
@@ -80,31 +80,31 @@
                                                   <img src="assets/sample-flower-image.png" alt="">
                                                <p>Lily Blossom</p>
                                                     <p class="p-weight">20 USD</p>
-                                                  <input type="text" placeholder="ADD TO CART">
+                                                  <input class="plan-input" type="text" placeholder="ADD TO CART">
 
                                         </div>       <div>
                                                   <img src="assets/sample-flower-image.png" alt="">
                                                   <p>Lily Blossom</p>
                                                     <p class="p-weight">20 USD</p>
-                                                  <input type="text" placeholder="ADD TO CART">
+                                                  <input class="plan-input" type="text" placeholder="ADD TO CART">
 
                                         </div>       <div>
                                                   <img src="assets/sample-flower-image.png" alt="">
                                                     <p>Lily Blossom</p>
                                                       <p class="p-weight">20 USD</p>
-                                                  <input type="text" placeholder="ADD TO CART">
+                                                  <input class="plan-input" type="text" placeholder="ADD TO CART">
 
                                         </div>       <div>
                                                   <img src="assets/sample-flower-image.png" alt="">
                                                     <p>Lily Blossom</p>
                                                     <p class="p-weight">20 USD</p>
-                                                  <input type="text" placeholder="ADD TO CART">
+                                                  <input class="plan-input" type="text" placeholder="ADD TO CART">
 
                                         </div>       <div>
                                                   <img src="assets/sample-flower-image.png" alt="">
                                                <p>Lily Blossom</p>
                                                     <p class="p-weight">20 USD</p>
-                                                  <input id="input-id" type="text" placeholder="ADD TO CART">
+                                                  <input class="plan-input" type="text" placeholder="ADD TO CART">
 
                                           
                                         </div>                                        
@@ -135,7 +135,7 @@
    <!-- Latest Deals section start here -->
                     <section class="deal-section commin-width">
                        <div class="deals-conten">
-                        <h3 class="deal-title">Latest  Deals</h3>
+                        <h3 class="deal-title"><span class="deal-class">Latest</span>  Deals</h3>
                         <p class="deal-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
                       </div>
                     <div class="latest-deals-continer  display-flex ">
@@ -146,6 +146,10 @@
                       </div>
                       <div class="div-2">
                         <img src="assets/deal-zabo.png" alt="">
+                      <div class="div-3">
+                          <h4>25% Off | Zabo Plant</h4>
+                        <p>Shop Now</p>
+                      </div>
                       </div>
                     </div>
 </section>
@@ -163,5 +167,46 @@
                         <button >scribe</button>
                       </div>
                      </div>
+
+  <footer class="display-flex">
+    <div class="footer-div-1 ">
+      <h3 class="footer-title">SAIDUR</h3>
+      <P class="footer-description">
+        Indulge your senses with the beauty and fragrance of our fresh flower shop. 
+      </P>
+    </div>
+
+
+
+
+
+
+
+
+    <div class="footer-list display-flex">
+      <ul>
+        <li>Home</li>
+        <li>About Us</li>
+        <li>Blog</li>
+        <li>FAQ</li>
+        <li>Contact Us</li>
+      </ul>
+
+      <ul>
+        <li>Features</li>
+        <li>Pricing</li>
+        <li>Privacy Policy</li>
+        <li>Terms of Service</li>
+        <li>Help Center</li>
+        
+      </ul>
+    </div>
+    <div class="med-icon">
+      <img src="assets/icon-linkedin.png" alt="">
+      <img src="assets/icon-twitter.png" alt="">
+      <img src="assets/icon-facebook.png" alt="">
+      <img src="assets/icon-youtube.png" alt="">
+    </div>
+  </footer>
 </body>
 </html>
